@@ -31,6 +31,8 @@ The Grinder 3.1.1 (not yet released)
   align it with current browser implementations. Thanks to Bryan Cornies for
   the report.
 
+  Fix bug 1580340 - Can't invoke static methods through a wrapped Java class.
+
 
 The Grinder 3.1
 ---------------
